packages/cli/tests/fixtures/errors/duplicate/card/types.ts
import type { VariantProps } from "jade-garden";
import type { cardStyles } from ".";

export type Variants = VariantProps<typeof cardStyles>;
